# lnschema-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml  doc-changes.yml
django_project/: asgi.py  settings.py  urls.py  wsgi.py
docs/: api.md  changelog.md  index.md
docs/data-validation/: data_validation.ipynb
docs/guide/: 0-core-schema.ipynb  0-schema.ipynb  1-basic-orms.ipynb  1-data-validation.ipynb  2-data-validation.ipynb  core-schema.ipynb  get-started.ipynb  index.md  tables.ipynb  test-data-validation.ipynb
docs/guides/: all-models.ipynb  fix.ipynb  models.ipynb
docs/notes/: index.md
docs/tutorials/: quickstart.ipynb
lndb_schema_core/: __init__.py  _core.py  id.py
lnschema_core/: __init__.py  _core.py  _docs.py  _id.py  _link.py  _lookup.py  _migration_table.py  _prepare_schema.py  _queryset.py  _timestamps.py  _type.py  _types.py  _users.py  _versions.py  alembic.ini  apps.py  fields.py  id.py  ids.py  link.py  manage.py  mocks.py  models.py  type.py  types.py  users.py  validation.py
lnschema_core/dev/: __init__.py  _id.py  _storage.py  _type.py  _versions.py  id.py  sqlmodel.py  type.py
lnschema_core/migrations/: 0001_initial.py  0001_initial_new.py  0001_initial_squashed_0022_migrate_to_integer_pks.py  0001_initial_squashed_0023.py  0001_initial_squashed_0047.py  0002_alter_file_id.py  0002_alter_user_name.py  0003_alter_folder_id.py  0003_alter_storage_region_alter_transform_short_name.py  0004_alter_folder_created_at_alter_folder_updated_at.py  0004_rename_folder_tag_alter_project_folders.py  0005_alter_project_id_alter_run_id_alter_storage_id_and_more.py  0005_alter_run_inputs_delete_runinput.py  0006_feature.py  0006_feature_dataset.py  0006_transform_hash_alter_features_created_by_and_more.py  0007_feature_synonyms_featureset_field_and_more.py  0008_file_hash_type_transform_parents.py  0009_feature_field_alter_featureset_field_and_more.py  0009_feature_field_feature_unit_alter_featureset_field_and_more.py  0009_remove_featureset_files_feature_field_feature_unit_and_more.py  0009_remove_featureset_files_feature_unit_and_more.py  0010_dataset_categories_file_categories.py  0011_label_remove_tag_created_by_remove_tag_parents_and_more.py  0012_remove_label_ref_id_remove_label_ref_orm_and_more.py  0013_remove_feature_labels_orm_and_more.py  0014_rename_ref_field_featureset_registry.py  0015_file_initial_version_file_version.py  0015_file_stem_id_file_version.py  0016_dataset_input_of_dataset_run_dataset_transform.py  0016_dataset_input_of_dataset_run_dataset_transform_and_more.py  0017_dataset_version.py  (+62 more)
migrations/: env.py
testdb/: mydata.lndb
tests/: conftest.py  test_base.py  test_integrity.py  test_migr_postgres.py  test_migr_sqlite.py  test_migrations.py  test_models.py  test_notebooks.py  test_types.py  testdb.lndb
(+59 files in other folders)
