[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lnschema_core"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anndata",
    "sqlmodel>=0.0.8",
    "sqlalchemy>=1.4.41",
    "pydantic<2.0.0",
    "typeguard<3.0.0",
]

[project.urls]
Home = "https://github.com/laminlabs/lnschema-core"

[project.optional-dependencies]
test = [
    "pre-commit",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "pytest_alembic",
    "nbproject-test",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lnschema_core/*",
]
