[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lnschema_core"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
]

[project.urls]
Home = "https://github.com/laminlabs/lnschema-core"

[project.optional-dependencies]
dev = [
    "lamindb_setup>=0.64.0",
    "pre-commit",
    "nox",
    "laminci",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject-test",
    "pandas",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lnschema_core/*",
]
